Final project. Structure changes. Commit 2. Something is working